// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. article summary component with a single paragraph 1`] = `
<style>
.IS1 {
  margin-bottom: 0px;
}

.IS2 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
  font-size: 22;
  line-height: 27px;
}

.IS3 {
  color: inherit;
  font: inherit;
  white-space: inherit;
}

.IS4 {
  color: #696969;
  flex-wrap: wrap;
  margin-bottom: 10px;
  font-family: TimesDigitalW04;
  font-size: 14;
  line-height: 20px;
}

.IS5 {
  color: #696969;
  font-family: GillSansMTStd-Medium;
  font-size: 13;
  line-height: 15px;
  margin-bottom: 5px;
}
</style>

<div
  className="tc-view__TcView-nuazoi-0 fPjBcr"
  style={null}
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS1"
  >
    <ArticleLabel
      color="#333333"
      title="Test label"
    />
  </div>
  <div
    aria-level="3"
    className="tc-text__TcText-sc-15igzev-0 lhcAkf IS2"
    role="heading"
  >
    Test Headline
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf IS4"
  >
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
    >
      
      Test paragraph
      ...
    </div>
  </div>
  <ArticleFlags
    flags={
      Array [
        Object {
          "expiryTime": "2020-03-13T12:00:00.000Z",
          "type": "UPDATED",
        },
        Object {
          "expiryTime": "2019-03-14T12:00:00.000Z",
          "type": "EXCLUSIVE",
        },
      ]
    }
  />
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf IS5"
  >
    <DatePublication
      date="2017-11-17T00:01:00.000Z"
      publication="TIMES"
    />
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <ArticleByline
      ast={
        Array [
          Object {
            "attributes": Object {
              "slug": "camilla-long",
            },
            "children": Array [
              Object {
                "attributes": Object {
                  "value": "Camilla Long",
                },
                "children": Array [],
                "name": "text",
              },
            ],
            "name": "author",
          },
          Object {
            "attributes": Object {},
            "children": Array [
              Object {
                "attributes": Object {
                  "value": ", Environment Editor",
                },
                "children": Array [],
                "name": "text",
              },
            ],
            "name": "inline",
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`2. article summary content component with the given style 1`] = `
<style>
.IS1 {
  color: inherit;
  font: inherit;
  white-space: inherit;
}

.IS2 {
  color: #696969;
  flex-wrap: wrap;
  margin-bottom: 10px;
  font-family: TimesDigitalW04;
  font-size: 14;
  line-height: 20px;
}
</style>

<div
  className="tc-text__TcText-sc-15igzev-0 lhcAkf IS2"
>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf IS1"
  >
    
    Test
    ...
  </div>
</div>
`;

exports[`3. article summary content component with white space height and lineheight 1`] = `
<style>
.IS1 {
  color: inherit;
  font: inherit;
  white-space: inherit;
}

.IS2 {
  color: #696969;
  flex-wrap: wrap;
  margin-bottom: 10px;
  font-family: TimesDigitalW04;
  font-size: 14;
  line-height: 30px;
}
</style>

<div
  className="tc-text__TcText-sc-15igzev-0 lhcAkf IS2"
>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf IS1"
  >
    
    Test
    ...
  </div>
</div>
`;

exports[`4. article summary content component without white space height 1`] = `
<style>
.IS1 {
  color: inherit;
  font: inherit;
  white-space: inherit;
}

.IS2 {
  color: #696969;
  flex-wrap: wrap;
  margin-bottom: 10px;
  font-family: TimesDigitalW04;
  font-size: 14;
  line-height: 20px;
}
</style>

<div
  className="tc-text__TcText-sc-15igzev-0 lhcAkf IS2"
>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf IS1"
  >
    
    Test
    ...
  </div>
</div>
`;
